--- a/2_Machine_Learning_Model.ipynb
+++ b/2_Machine_Learning_Model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "24          -200.98         -157.18  QCM10  1-isobutanol  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "(125, 12)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "max         -40.630000      -49.870000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,7 @@
        "0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
        "0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1599,7 @@
        "9              0         0.0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1678,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2020,7 @@
        "4      ada  0.566013  0.178880"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2045,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2054,7 @@
        "0.6333333333333334"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2067,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2086,7 @@
        "0.6842105263157895"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -2135,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -2144,7 +2144,7 @@
        "0.8398692810457516"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -2176,7 +2176,7 @@
        "0.868421052631579"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -2225,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2234,7 @@
        "0.8973856209150327"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2247,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2257,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2266,7 @@
        "1.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -2315,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2324,7 @@
        "0.5875816993464051"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2337,7 +2337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2356,7 @@
        "0.6578947368421053"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2369,7 +2369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2414,7 @@
        "0.5660130718954248"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2427,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2437,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2446,7 @@
        "0.6578947368421053"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2459,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -2495,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -2568,7 +2568,7 @@
        "4      ada     0.566013    0.657895"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2603,7 +2603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -2632,7 +2632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -2643,7 +2643,7 @@
        " 'dt__min_samples_split': 2}"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2655,7 +2655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -2664,7 +2664,7 @@
        "0.8597222222222222"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2683,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2693,7 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -2711,7 +2711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2736,6 +2736,14 @@
    "source": [
     "# classification report\n",
     "print(classification_report(y_test,y_pred_dt_grid))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Analysis`:\\\n",
+    "from 240 fits (Combinations of hyperparameters), we can see that the best hyperparameter is `'dt__criterion': 'gini', 'dt__min_samples_leaf': 1, 'dt__min_samples_split': 2`. the Trainscore is `0.8597 `and the test  score is `0.8684`, the model is good fitting. the compute time is around 4.8 seconds. there's is an improvement in this model compare to the baseline model."
    ]
   }
  ],
