--- a/3_ANN_Model.ipynb
+++ b/3_ANN_Model.ipynb
@@ -2018,6 +2018,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classification Report"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 158,
    "metadata": {},
